Fix build on master